# dominus

./: .gitignore  CMakeLists.txt  Makefile  README.md
Dominus/: CMakeLists.txt  Dominus.c  Dominus.h
include/: config.h  dominus.h
src/: main.c
